# splicer

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
abstract/: index.html
documentation/: abstract.md
hardware/cad/splicer_controller/: splicer_RJ45BOB_2020-mount.f3d  splicer_control_folding-table-mdf-16mm.f3d  splicer_controller_48v_psu_mount4040.f3d  splicer_controller_dinrail-4xDM420-1x542-mount.f3d  splicer_controller_display-4040-vesa-mount_A.f3d  splicer_controller_emergency-switch-box.f3d  splicer_controller_kvm-button-case-bottom.f3d  splicer_controller_rackrail-offsetblock.f3d  splicer_extrusion_4040_500mm.f3d  splicer_extrusion_4040_540mm.f3d  splicer_streaming-camera-mount_2020.f3d  splicer_streaming-camera-mount_4040.f3d  splicer_streaming-camera-sensor-mount.f3d  splicer_streaming_camera-mount-generic_vhb.f3d  splicer_xyc-axis_RJ45BOB-4040x8-mount.f3d
hardware/cad/splicer_light/: splicer_extrusion_4040_1980mm.f3d
machine/cad/: splicer_extrusion_4080_380mm.f3d  splicer_extrusion_4080_440mm.f3d  splicer_extrusion_4080_540mm.f3d
machine/linux-cnc-config/: custom.hal  io.hal  splicer.hal  splicer.ini
search/: search_index.json
site/: 404.html
software/animator/: splicer_animator_toolpost_mesh.stl  splicer_animator_v2025.blend  splicer_animator_v2025.blend1
software/framegrabber/: framegrabber-config_focus-calibration.ccf  framegrabber-config_sampling.ccf
software/linux-cnc-config/: corexy_by_hal.hal  custom.hal  io.hal  splicer.ini  splicer.var  splicer.var.bak  tool.tbl
(+215 files in other folders)
