[project]
name = "splicer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ferdinand Niedermann",email = "nerdinand@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.4,<10.0.0)",
    "mkdocs-with-pdf (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
